Redux Store fixes
